tests/error/union_array_empty.gw
#! [contains] must be defined with empty
union U { int : int [4] };
